# summit-mlops-2025

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ct-ci-cd.yaml
{{cookiecutter.repo_name}}/k8s/api/: Dockerfile  api.yaml
{{cookiecutter.repo_name}}/k8s/experiment/: Dockerfile  kubernetes_config.json  kubernetes_job_template.yaml
{{cookiecutter.repo_name}}/k8s/mlflow/: Dockerfile  dailyclean.yml  mlflow.yml
{{cookiecutter.repo_name}}/scripts/: uninstall-mlflow.sh
{{cookiecutter.repo_name}}/src/{{cookiecutter.module_name}}/: main.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.module_name}}/api/: infer.py  main.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.module_name}}/training/: MLProject  main.py
