[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "fire>=0.7.1",
    "scikit-learn>=1.7.2",
]

[project.scripts]
hello = "{{ cookiecutter.module_name }}.main:main"
api = "{{ cookiecutter.module_name }}.api.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
api = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
]
training = [
    "mlflow[extras]>=3.4.0",
]
